# obmc.rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  TODO.md  cliff.toml  rustfmt.toml  setup.ps1  setup.sh
.github/: _publish.yml
.github/ISSUE_TEMPLATE/: 01-bug.yml  config.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build.yml  docs.yml  draft.yml  format.yml  publish.yml  test.yml
src/: cli.rs  lib.rs  main.rs  prelude.rs  processing.rs  separators.rs  seperators.rs  stamp_converter.rs
src/folders/: crawlers.rs  folder_types.rs  mod.rs
tests/: e2e_rename.rs
