cargo-features = ["codegen-backend", "profile-rustflags", "trim-paths"]
# cargo-features = ["profile-rustflags", "trim-paths"] # required for both trimming paths and setting rustflags
# cargo-features = ["codegen-backend"] 
# The aboe also needs the profile.dev to be uncommented to use the cranelift backend
[package]
name         = "order_by_media_creation"
version      = "0.1.0"
authors      = ["MrDwarf7", "Blake B. <github.com/MrDwarf7>"]
edition      = "2024"
license-file = "LICENSE"
readme       = "README.md"

# For running the main server as a watch call
# cargo watch -q -c -w src/ -x run

[dependencies]

# Base dependencies/Commons
serde    = { version = "1.0.214", features = ["derive"] }
clap     = { version = "4.5.20", features = ["derive"] }
eyre     = "0.6.12"
chrono   = "0.4.38"
filetime = "0.2.25"
rayon    = "1.10.0"
tempfile = "3.13.0"
nom-exif = "2.5.4"

# log = "0.4.22"
# thiserror = "1.0.61"
# reqwest = { version = "0.12.4", features = ["cookies", "json", "multipart", "stream"] }
# tokio = { version = "1.9.0", features = ["full", "tracing"] }
# tokio-util = { version = "0.7.11", features = ["codec"] }
# futures = "0.3.30"
# serde_json = "1.0.117"
# toml = "0.8.14"

# Logging and tracing
# tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "std"] }

# Helpers
# async-trait = "0.1.80"
# dotenv_codegen = "0.15.0"
# dotenv = "0.15.0"
# static-toml = "1.2.0"

# Utilities - Try and remove/code out
# walkdir = "2.5.0"
# chrono = "0.4.9"
# itertools = "0.13.0"

######################################################################################################################################################
######################################################################################################################################################

[profile.dev]
opt-level        = 1
codegen-units    = 256
incremental      = true
rustflags        = ["-Zthreads=16"]
codegen-backend  = "cranelift"
debug            = "line-tables-only"
debug-assertions = true
overflow-checks  = true
strip            = "none"             # true | false | "none" | "symbols" | "debuginfo" ## Leave off @ w. THIS IS NOT OBFUSCATION.
panic            = "abort"            # "unwind" | "abort"
lto              = "off"              # "false" ### # true | false | "off" | "thin" | "fat" ## Can't use with cranelift yet
trim-paths       = "none"
# tune-cpu         = "native"

######################################################################################################################################################

[profile.release]
opt-level        = 3
codegen-units    = 1
incremental      = false
rustflags        = ["-Zthreads=16"]
codegen-backend  = "cranelift"               # May break deps.
debug            = "none"
debug-assertions = false
overflow-checks  = false                     # debatable
strip            = "symbols"                 # true | false | "none" | "symbols" | "debuginfo" ## Leave off @ w. THIS IS NOT OBFUSCATION.
panic            = "unwind"
lto              = "off"                     # true | false | "off" | "thin" | "fat" ## Can't use with cranelift yet
trim-paths       = ["diagnostics", "object"]
# tune-cpu         = "native"


[profile.dev.package."*"]
inherits        = "release"
codegen-backend = "cranelift" #### May break deps. for external crates

[profile.release.package."*"]
inherits        = "release"
codegen-backend = "cranelift" #### May break deps. for external crates??????

######################################################################################################################################################
######################################################################################################################################################

# Lint levels / priorities/priority
# 0 = forbid
# 1 = deny
# 2 = warn
# 3 = allow
# [lints.rust]
# unsafe_code = { level = "forbid", priority = 0 }
# unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = { level = "warn", priority = 2 }


########################

####[profile.dev.package."*"]
####opt-level     = 3
####codegen-units = 1
####
####[profile.dev]
####opt-level     = 1
####codegen-units = 256
####incremental   = true
#####rustflags = ["-Zthreads=16" ]
####
####[profile.release]
####opt-level        = 3
####codegen-units    = 1
####debug            = "none"
####debug-assertions = false
####incremental      = true
##### trim-paths = "all"
#####rustflags = ["-Zthreads=16" ]
####
##### strip = "symbols" # Leave off @ w
##### lto = "fat" ## Can't use with cranelift yet
##### panic = "unwind"
