cargo-features = ["codegen-backend", "profile-rustflags", "trim-paths"]

[package]
name         = "obmc"
version      = "0.2.0"
authors      = ["MrDwarf7", "Blake B. <github.com/MrDwarf7>"]
edition      = "2024"
description  = "Organize media files by prefixing filenames with their media creation date"
license-file = "LICENSE"
readme       = "README.md"
build        = "build.rs"

[package.metadata.winresource]
OriginalFilename = "obmc.exe"
FileDescription  = "Organize media files by prefixing filenames with their media creation date"
LegalCopyright   = "Copyright (c) Blake B. @github.com/MrDwarf7"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.19"

[dependencies]
clap     = { version = "4", features = ["derive"] }
anstyle  = "1"
eyre     = "0.6"
chrono   = "0.4"
rayon    = "1"
tempfile = "3"
nom-exif = "3"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[lints.rust]
unsafe_code = { level = "forbid", priority = 0 }

[lints.clippy]
enum_glob_use = { level = "warn", priority = 2 }

[profile.dev]
opt-level        = 1
codegen-units    = 256
incremental      = true
rustflags        = ["-Zthreads=16"]
codegen-backend  = "cranelift"
debug            = "line-tables-only"
debug-assertions = true
overflow-checks  = true
strip            = "none"
panic            = "abort"
lto              = "off"
trim-paths       = "none"

[profile.release]
opt-level        = 3
codegen-units    = 1
incremental      = false
rustflags        = ["-Zthreads=16"]
codegen-backend  = "cranelift"
debug            = "none"
debug-assertions = false
overflow-checks  = false
strip            = "symbols"
panic            = "unwind"
lto              = "off"
trim-paths       = ["diagnostics", "object"]

[profile.dev.package."*"]
inherits        = "release"
codegen-backend = "cranelift"

[profile.release.package."*"]
inherits        = "release"
codegen-backend = "cranelift"
